src/snapshots/openapi31to30__utoipa_tests__multipart-before.snap
---
source: src/utoipa_tests.rs
expression: "&yaml"
---
openapi: 3.1.0
info:
  title: utoipa-axum
  description: Utoipa's axum bindings for seamless integration for the two
  contact:
    name: Juha Kukkonen
    email: juha7kukkonen@gmail.com
  license:
    name: MIT OR Apache-2.0
    identifier: MIT OR Apache-2.0
  version: 0.2.0
paths:
  /user:
    post:
      operationId: post_user
      requestBody:
        content:
          multipart/form-data:
            schema:
              $ref: '#/components/schemas/UserForm'
        required: true
      responses:
        '200':
          description: ''
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/UserWithNullableField'
components:
  schemas:
    UserForm:
      type: object
      required:
      - name
      - file
      properties:
        file:
          type: string
          format: binary
          contentMediaType: application/octet-stream
        name:
          type: string
    UserWithNullableField:
      type: object
      required:
      - id
      properties:
        id:
          type: integer
          format: int32
        name:
          type:
          - string
          - 'null'
